# libxfsx

./: .gitmodules  .travis.yml  CMakeLists.txt  README-fuzzing.md  README-ubuntu.md  README-unix.md  README-win.md  README.md  config.cc.in  config.hh.in  value.inf
bed/: arguments.cc  arguments.hh  arguments_impl.hh  command.cc  command.hh  main.cc
bed/command/: arguments.cc  arguments.hh  ber_commands.cc  ber_commands.hh  compute_aci.cc  compute_aci.hh  edit.cc  edit.hh  write_aci.cc  write_aci.hh
ci/docker/: build.sh  run.sh  upload_coverage.sh
ci/travis/: after_script.sh  after_success.sh  before_install.sh  before_script.sh  install.sh  script.sh
config/: ber_magic  detector.json  detector_schema.json  detector_tap_only.json  pretty_tap.lua
example/: bed_comp.bash  bed_comp.zsh
test/: bcd.cc  bcd_decode.cc  bcd_encode.cc  bcd_speed.cc  ber2ber.cc  ber2ber.hh  ber2xml.cc  ber2xml.hh  byte.cc  character.cc  comment.cc  detector.cc  hex.cc  integer.cc  magic.bash  main.cc  path.cc  raw_vector.cc  scratchpad.cc  tap.cc  test.cc  test.hh  tlc_reader.cc  xfsx.cc  xml.cc  xml2ber.cc  xml2ber.hh  xml2lxml.cc
test/bed/: command.cc  helper.hh
test/bed/command/: compute_aci.cc  edit.cc  mk_bash_comp.cc  search.cc  validate.cc  write_aci.cc  write_ber.cc  write_def.cc  write_id.cc  write_indef.cc  write_xml.cc
test/in/: block_test0.ber  deep_invalid.ber  length_overflow.ber  nrt_2_1.ber  nrt_2_1.xml  rap_ack.ber  rap_ack.xml  rap_mini.ber  rap_mini.xml  skip_test.ber  spurious_gt.xml  tap_3_12_negative_volume.ber  tap_3_12_negative_volume_fixed.ber  tap_3_12_timestamps.ber  tap_3_12_trailing_eoc_invalid.ber  tap_3_12_valid.ber  tap_3_12_valid_add_osi.ber  tap_3_12_valid_att.ber  tap_3_12_valid_most_indef.ber  tap_3_12_valid_removed.ber  tap_3_12_valid_replaced.ber  tap_3_12_valid_some_cdr_indefinite.ber  tap_notification.ber  tap_notification.xml  two-root.ber  zero_test0.ber
test/ref/: magic.list  magic.out
test/ref/bed/command/: aci.xml  block_zero.xml  count.xml  edit_aci.ber  edit_remove_indefinite.ber  skip_zero.xml  write_aci.ber  write_indef.ber  write_xml_auto.xml  write_xml_auto_not.xml  write_xml_cdr.xml  write_xml_cdr_range.xml  write_xml_pp.xml
test/ref/ber_pretty_xml/: tap_3_12_valid_add_osi.xml  tap_3_12_valid_att.xml  tap_3_12_valid_removed.xml  tap_3_12_valid_replaced.xml
test/ref/ber_pretty_xml/asn1c/examples/sample.source.TAP3/: sample-DataInterChange-1.xml
test/ref/ber_pretty_xml_args/: tap_3_12_valid.xml  tap_3_12_valid_add_osi.xml  tap_3_12_valid_att.xml  tap_3_12_valid_removed.xml  tap_3_12_valid_replaced.xml
test/ref/ber_pretty_xml_args/asn1c/examples/sample.source.TAP3/: sample-DataInterChange-1.xml
test/ref/ber_xml/asn1c/asn1c/tests/data-62/: data-62-01.xml  data-62-10.xml  data-62-11.xml  data-62-13-B.xml  data-62-15-B.xml  data-62-16.xml  data-62-20.xml  data-62-22.xml  data-62-25.xml  data-62-27.xml  data-62-32.xml
test/ref/ber_xml/asn1c/examples/sample.source.PKIX1/: sample-Certificate-1.xml
test/ref/ber_xml/asn1c/examples/sample.source.TAP3/: sample-DataInterChange-1.xml
test/ref/definite/asn1c/asn1c/tests/data-62/: data-62-10.out  data-62-11.out  data-62-13-B.out  data-62-14.out  data-62-16.out  data-62-20.out  data-62-22.out  data-62-25.out
test/ref/indefinite/asn1c/asn1c/tests/data-62/: data-62-01.out  data-62-10.out  data-62-11.out  data-62-13-B.out  data-62-14.out  data-62-15-B.out  data-62-16.out  data-62-20.out  data-62-22.out  data-62-25.out  data-62-27.out  data-62-32.out
test/ref/indefinite/asn1c/examples/sample.source.LDAP3/: sample-LDAPMessage-1.out
test/ref/indefinite/asn1c/examples/sample.source.PKIX1/: sample-Certificate-1.out
test/ref/indefinite/asn1c/examples/sample.source.TAP3/: sample-DataInterChange-1.out
test/ref/indent_unber_tl/asn1c/asn1c/tests/data-62/: data-62-01.xml  data-62-10.xml  data-62-11.xml  data-62-13-B.xml  data-62-14.xml  data-62-15-B.xml  data-62-16.xml  data-62-20.xml  data-62-22.xml  data-62-25.xml  data-62-27.xml  data-62-32.xml
test/ref/indent_unber_tl/asn1c/examples/sample.source.LDAP3/: sample-LDAPMessage-1.xml
test/ref/indent_unber_tl/asn1c/examples/sample.source.PKIX1/: sample-Certificate-1.xml
test/ref/indent_unber_tl/asn1c/examples/sample.source.TAP3/: sample-DataInterChange-1.xml
test/ref/unber_tl/asn1c/asn1c/tests/data-62/: data-62-01.xml  data-62-10.xml  data-62-11.xml  data-62-13-B.xml  data-62-14.xml  data-62-15-B.xml  data-62-16.xml  data-62-20.xml  data-62-22.xml  data-62-25.xml  data-62-27.xml  data-62-32.xml
test/ref/unber_tl/asn1c/examples/sample.source.LDAP3/: sample-LDAPMessage-1.xml
test/ref/unber_tl/asn1c/examples/sample.source.PKIX1/: sample-Certificate-1.xml
test/ref/unber_tl/asn1c/examples/sample.source.TAP3/: sample-DataInterChange-1.xml
test/xfsx/: search.cc
test/xfsx/tap/: traverser.cc
test/xfsx/traverser/: matcher.cc
tool/: ber2lxml_back_fuzzer.cc  ber2lxml_fuzzer.cc  ber2xml_fuzzer.cc  mk_bcd_lookup.py  tel-code-gen.py  xml2ber_fuzzer.cc
xfsx/: bcd.cc  bcd.hh  bcd_impl.hh  ber2ber.cc  ber2ber.hh  ber2lxml.cc  ber2lxml.hh  ber2xml.cc  ber2xml.hh  ber_node.cc  ber_node.hh  ber_writer.cc  ber_writer.hh  ber_writer_arguments.cc  ber_writer_arguments.hh  byte.cc  byte.hh  character.cc  character.hh  comment.cc  comment.hh  config.hh  detector.cc  detector.hh  hex.cc  hex.hh  hex_impl.hh  integer.cc  integer.hh  lxml2ber.cc  lxml2ber.hh  octet.hh  path.cc  path.hh  raw_vector.hh  s_pair.cc  s_pair.hh  scratchpad.cc  scratchpad.hh  search.cc  (+22 more)
xfsx/bcd/: decode.hh  encode.hh  util.hh
xfsx/tap/: traverser.cc  traverser.hh
xfsx/traverser/: lxml.hh  matcher.hh  tlc.hh  traverser.hh
